tests/errors/semantic/E006_reexport_missing.zy
# E006_reexport_missing {
    <# ./E006_base <= base

    #> {
        base::real_fn
        base::ghost_fn
    }
}
